<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        android:showAsAction="always|collapseActionView"
        android:actionViewClass="android.widget.SearchView"/>

    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/ic_filter"
        android:title="@string/filter"
        android:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_download"
        android:title="@string/download">
        <menu>
            <item
                android:id="@+id/menu_art"
                android:title="Sugimori art (58MB)"/>
            <item
                android:id="@+id/menu_sprite"
                android:title="Sprites (5,6MB)"/>
        </menu>
    </item>
    <item
        android:id="@+id/menu_downloadsound"
        android:title="@string/downloadsound">
        <menu>
            <item
                android:id="@+id/menu_downloadanime"
                android:title="Anime (53,3MB)"/>
            <item
                android:id="@+id/menu_downloadgame"
                android:title="Game (49,1MB)"/>
        </menu>
    </item>
</menu>